--- a/stripdetail/templates/stripdetail/strips.html
+++ b/stripdetail/templates/stripdetail/strips.html
@@ -1,26 +1,29 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}List of Strips{% endblock title %}
-{%block content %}
+{% block content %}
 <div class="container">
     <div class="row text-center mb-4">
         <h1>List of Strips</h1>
     </div>
+    <!-- Authentication Control -->
     {% if request.user.is_authenticated %}
-    <div class="row justify-content-center my-4">
-        <div class="col-4 text-center">
+    <div class="row justify-content-center mb-5">
+        <div class="col text-center">
             <a href="{% url 'strip-create' %}" class="btn btn-grey">Add New Strip</a>
         </div>
     </div>
     {% endif %}
-    <div class="row gap-5 justify-content-center my-auto">
+    <section class="row gap-5 justify-content-center my-auto">
         <!-- Conditional Rendering -->
         {% if page_obj %}
         <div class="row justify-content-center gap-5">
+            <!-- Loop through the list of Strips -->
             {% for strip in page_obj %}
+            <!-- Strips Cards-->
             <div class="col-lg-3 col-sm-5">
                 <div class="card">
-                    <img src=" {{ strip.strip_cover.url }}" class="card-img-top" alt="{{ strip.title}} cover image">
+                    <img src=" {{ strip.strip_cover.url }}" class="card-img-top" alt="{{ strip.title }} cover image">
                     <div class="card-body">
                         <h5 class="card-title">{{ strip.title }}</h5>
                         <p class="card-text">
@@ -59,23 +62,25 @@
                         </li>
                     </ul>
                     <div class="card-body text-center">
-                        <button class="btn btn-blue my-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCard{{ strip.id }}" aria-expanded="false" aria-controls="collapseCard{{ strip.id }}">Details</button>
+                        <button class="btn btn-blue m-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCard{{ strip.id }}" aria-expanded="false" aria-controls="collapseCard{{ strip.id }}">Details</button>
                     <!-- Check for authentication and if user is usert that add the strip -->
                     {% if request.user.is_authenticated and request.user.id == strip.user.id %}
-                        <a href="{% url 'strip-update' strip.slug %}" class="btn btn-yellow my-1">Update</a>
-                        <a href="{% url 'strip-delete' strip.slug %}" class="btn btn-red my-1">Delete</a>
+                        <a href="{% url 'strip-update' strip.slug %}" class="btn btn-yellow m-1" aria-label="Link to update {{ strip.title }}">Update</a>
+                        <a href="{% url 'strip-delete' strip.slug %}" class="btn btn-red m-1" aria-label="Link to delete {{ strip.title }}">Delete</a>
                     {% endif %}
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+        <!-- Include pagination template -->
         {% include 'pagination.html' %}
+        <!-- Shown when there is no content -->
         {% else %}
         <div class="row text-center mt-4">
             <h2>There are currently no comics. <strong>Be the first to add!</strong></h2>
         </div>
         {% endif %}
-    </div>
+    </section>
 </div>
 {% endblock content %}
