Change style, add padding, margin

--- a/stripdetail/templates/stripdetail/strip_update.html
+++ b/stripdetail/templates/stripdetail/strip_update.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <input type="submit" value="Update" class="btn btn-yellow mt-3">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
     </section>
