--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -16,7 +16,7 @@
                 {{ form.media }}
                 {{ form|crispy }}
                 <input type="submit" value="Create" class="btn btn-green mt-3">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
     </section>
