--- a/stripdetail/templates/stripdetail/strip_create.html
+++ b/stripdetail/templates/stripdetail/strip_create.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <input type="submit" value="Create" class="btn btn-green mt-3">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
     </section>
