--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -4,8 +4,8 @@
 {% block title %}Write New Review{% endblock title %}
 {% block content %}
 <!-- Strip Post Creation Page -->
-<div class="container">
-    <section class="row justify-content-center">
+<section class="container">
+    <div class="row justify-content-center">
         <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Write Review</h1>
             <p>There is no edition of the comic you want to write about?</p>
@@ -19,6 +19,6 @@
                 <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
