--- a/blogpost/templates/blogpost/post_update.html
+++ b/blogpost/templates/blogpost/post_update.html
@@ -4,8 +4,8 @@
 {% block title %}Update Review{% endblock title %}
 {% block content %}
 <!-- Strip Post Update Page -->
-<div class="container">
-    <section class="row justify-content-center">
+<section class="container">
+    <div class="row justify-content-center">
         <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Update Review</h1>
             <!-- Form For Updating Posts -->
@@ -17,6 +17,6 @@
                 <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
