--- a/stripdetail/templates/stripdetail/strip_create.html
+++ b/stripdetail/templates/stripdetail/strip_create.html
@@ -4,8 +4,8 @@
 {% block title %}Create Strip Details{% endblock title %}
 {% block content %}
 <!-- Strip Details Creation Page -->
-<div class="container">
-    <section class="row justify-content-center">
+<section class="container">
+    <div class="row justify-content-center">
         <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Expand Strip Collection</h1>
             <!-- Form For Creating Strip Details -->
@@ -45,6 +45,6 @@
                 <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
