--- a/stripdetail/templates/stripdetail/strips.html
+++ b/stripdetail/templates/stripdetail/strips.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}List of Strips{% endblock title %}
 {% block content %}
-<div class="container">
+<section class="container">
     <div class="row text-center mb-4">
         <h1>List of Strips</h1>
     </div>
@@ -14,14 +14,14 @@
         </div>
     </div>
     {% endif %}
-    <section class="row gap-5 justify-content-center my-auto">
+    <div class="row gap-5 justify-content-center my-auto">
         <!-- Conditional Rendering -->
         {% if page_obj %}
         <div class="row justify-content-center gap-5">
             <!-- Loop through the list of Strips -->
             {% for strip in page_obj %}
             <!-- Strips Cards-->
-            <div class="col-lg-3 col-sm-5">
+            <div class="col-lg-3 col-md-5">
                 <div class="card">
                     <img src=" {{ strip.strip_cover.url }}" class="card-img-top" alt="{{ strip.title }} cover image">
                     <div class="card-body">
@@ -81,6 +81,6 @@
             <h2>There are currently no comics. <strong>Be the first to add!</strong></h2>
         </div>
         {% endif %}
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
