--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
 <body>
+    <!-- Include header template -->
     {% include 'header.html' %}
     <!-- Django messages with bootstrap style -->
     <div class="container">
@@ -28,16 +31,19 @@
             </div>
         </div>
     </div>
+    <!-- Include Background Animation Template -->
     {% include 'background_animation.html' %}
     <main class="my-5">
         {% block content %}
         {% endblock content %}
     </main>
+    <!-- Include Sign Out Modal Confirmation -->
     {% include 'member/sign_out_confirm.html' %}
-
+    <!-- Include footer template -->
     {% include 'footer.html' %}
-
+    <!-- Custom JavaScript -->
     <script src="{% static 'js/script.js' %}"></script>
+    <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
