--- a/templates/delete_confirm.html
+++ b/templates/delete_confirm.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Delete {{ object }} Confirmation{% endblock title %}
 {% block content %}
-<div class="container">
+<section class="container">
     <div class="row justify-content-center">
         <div class="col-md-7 text-center btn-grey rounded p-4">
             <h1>Delete Confiramtion</h1>
@@ -15,5 +15,5 @@
             </form>
         </div>
     </div>
-</div>
+</section>
 {% endblock content %}
