--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}StripTeaser Blog{% endblock title %}
+{% block title %}Search Results{% endblock title %}
 {% block content %}
-<div class="container">
+<section class="container">
     <div class="row text-center mb-4">
         <h1>Search Results</h1>
     </div>
@@ -20,6 +20,7 @@
                                     @{{ post.author }}
                                 </a>
                             </p>
+                            <!-- Django safe filter to render html content and truncatewords to show first 30 words -->
                             {{ post.content|safe|truncatewords:30 }}
                             <div class="text-end">
                                 <a href="{% url 'post' post.slug %}" class="btn btn-colors">More...</a>
@@ -30,5 +31,5 @@
             {% endif %}
         {% endfor %}
     </div>
-</div>
+</section>
 {% endblock content %}
