Add meta data seo, description

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO, Description, Keywords -->
+    <meta name="description" content="StripTeaser is a captivating blog dedicated to providing enticing reviews and insights into the world of comic strips, delighting readers with its engaging content and commentary.">
+    <meta name="keywords" content="Comic strips, reviews, blog, entertainment, comics, enthusiasts, insights, commentary, engaging, delight">
+    <meta name="author" content="Milos Radulovic">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'favicon/apple-icon-57x57.png' %}">
     <link rel="apple-touch-icon" sizes="60x60" href="{% static 'favicon/apple-icon-60x60.png' %}">
