--- a/templates/header.html
+++ b/templates/header.html
@@ -38,7 +38,7 @@
                                     data-bs-target="#signOutModal" aria-label="Link for sign out">Sign Out</a></li>
                             {% else %}
                             <li><a class="dropdown-item px-2" href="{% url 'sign-in' %}" aria-label="Link to sign in page">Sign In</a></li>
-                            <li><a class="dropdown-item px-2" href="{% url 'sign-up' %}" aria-label="Link to sign up page"></a>>Sign Up</a></li>
+                            <li><a class="dropdown-item px-2" href="{% url 'sign-up' %}" aria-label="Link to sign up page">Sign Up</a></li>
                             {% endif %}
                         </ul>
                     </li>
