--- a/member/templates/member/profile_update.html
+++ b/member/templates/member/profile_update.html
@@ -1,25 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}Update Profile Page{% endblock title %}
+{% block title %}Update Profile{% endblock title %}
 {% block content %}
-<div class="container">
-    <section class="row justify-content-center">
-        <div class="col-md-7">
+<section class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-7 btn-grey rounded p-4">
             <div class="d-flex align-items-center mb-4">
                 <img src="{{ user.member.avatar.url }}" alt="member avatar" width="75" height="75" class="me-2">
                 <h1>{{ user.username }}&apos;s Profile</h1>
             </div>
+            <!-- Form For Update Profile -->
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ user_form | crispy }}
                 {{ profile_form | crispy }}
                 <div class="d-flex justify-content-center">
-                    <input type="submit" value="Update" class="btn btn-green">
-                    <input type="reset" value="Clear" class="btn btn-outline-secondary ms-1">
+                    <input type="submit" value="Update" class="btn btn-green mx-1">
+                    <input type="reset" value="Clear" class="btn btn-outline-secondary mx-1">
                 </div>
             </form>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
