--- a/member/templates/member/sign_in.html
+++ b/member/templates/member/sign_in.html
@@ -4,21 +4,22 @@
 {% block title %}Sign In To StripTeaser Blog{% endblock title %}
 {% block content %}
 <!-- User Sign In Form-->
-<div class="container">
-    <section class="row justify-content-center">
-        <div class="col-md-7">
+<section class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Sign In</h1>
+            <!-- Sign In Form-->
             <form action="" method="POST">
                 {% csrf_token %}
                 {{ form | crispy}}
                 <input type="submit" value="Sign In" class="btn btn-green">
-                <input type="reset" value="Clear" class="btn btn-outline-secondary">
+                <input type="reset" value="Clear" class="btn btn-outline-secondary mx-1">
             </form>
             <p class="mt-4 text-muted">
                 Not a member yet?
                 <a href="{% url 'sign-up' %}" aria-label="Link to sign up page">Sign Up</a>
             </p>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 {% endblock content %}
