--- a/member/templates/member/sign_out_confirm.html
+++ b/member/templates/member/sign_out_confirm.html
@@ -10,8 +10,8 @@
             <div class="modal-body text-center">
                 <p class="my-auto">{{ request.user.first_name }}, are you sure you want to sign out?</p>
             </div>
-            <div class=" modal-footer">
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary mx-1" data-bs-dismiss="modal">Close</button>
                 <a href="{% url 'sign-out' %}" class="btn btn-green" aria-label="Sign Out from page">Sign Out</a>
             </div>
         </div>
