--- a/member/templates/member/profile_update.html
+++ b/member/templates/member/profile_update.html
@@ -14,6 +14,7 @@
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ user_form | crispy }}
+                {{ profile_form.media }}
                 {{ profile_form | crispy }}
                 <div class="d-flex justify-content-center">
                     <input type="submit" value="Update" class="btn btn-green mx-1">
