Add home page content and link

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,24 @@
 {% load static %}
 {% block title %}StripTeaser Blog{% endblock title %}
 {% block content %}
-
+<section class="container">
+    <div class="row justify-content-center text-center">
+        <div class="col-md-7 btn-grey rounded p-4">
+            <h2>Welcome to StripTeaser <svg class="css-ze2te4 css-qd6ojx"
+                viewBox="0 0 88.98305084745763 84.09388559703329" width=40 height=40>
+                <g transform="translate(-1.8910208383443239, -4.335746534508351) scale(0.9663173359826587)"
+                    class="css-1lmlii8" fill="#f5af02">
+                    <path xmlns="http://www.w3.org/2000/svg"
+                        d="M28.036,91.512c-0.38,0-0.764-0.104-1.096-0.324c-0.708-0.467-1.048-1.332-0.844-2.155l3.552-14.353H15.872  c-0.944,0-1.764-0.656-1.956-1.584L2,16.368c-0.116-0.556,0.004-1.132,0.34-1.588c0.332-0.456,0.84-0.752,1.404-0.813L91.828,4.5  c0.607-0.072,1.22,0.156,1.648,0.592c0.428,0.436,0.631,1.056,0.547,1.66l-7.836,58.191c-0.136,0.992-0.979,1.736-1.983,1.736  H61.216L29.256,91.1C28.892,91.376,28.464,91.512,28.036,91.512L28.036,91.512z">
+                    </path>
+                </g>
+            </svg></h2>
+            <p>your go-to destination for all things comics!</p>
+            <p>At StripTeaser, we are dedicated to the popularization of comics and fostering a vibrant community of comic book enthusiasts.</p>
+            <p>As a user of StripTeaser, you have the opportunity to register and unleash your creativity by writing captivating blog posts. Share your comic reviews, delve into discussions about your favorite characters and storylines, and even advertise upcoming comic publications. However, before your posts go live, they will undergo a thorough review process by our diligent admin team to ensure quality and relevance.</p>
+            <p>Our goal is to create an engaging platform where fans can come together to share their love for comics, discover new titles, and connect with like-minded individuals. By providing a space for users to express their thoughts and opinions, we strive to cultivate a supportive and thriving community of comic enthusiasts.</p>
+            <p>Join us at StripTeaser, register today, and become part of a dynamic community where your passion for comics can truly thrive!</p>
+        </div>
+    </div>
+</section>
 {% endblock content %}
