--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
     <!-- Modified Bootstrap Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><svg class="css-ze2te4 css-qd6ojx"
+            <a class="navbar-brand" href="{% url 'home-page' %}"><svg class="css-ze2te4 css-qd6ojx"
                     viewBox="0 0 88.98305084745763 84.09388559703329" width=40 height=40>
                     <g transform="translate(-1.8910208383443239, -4.335746534508351) scale(0.9663173359826587)"
                         class="css-1lmlii8" fill="#f5af02">
