--- a/blogpost/templates/blogpost/post_create.html
+++ b/blogpost/templates/blogpost/post_create.html
@@ -9,7 +9,7 @@
         <div class="col-md-7 btn-grey rounded p-4">
             <h1 class="mb-4">Write Review</h1>
             <p>There is no edition of the comic you want to write about?</p>
-            <a href="{% url 'strip-create' %}" class="btn btn-grey mb-4">You can add here!</a>
+            <a href="{% url 'strip-create' %}" class="btn btn-outline-secondary mb-4">You can add here!</a>
             <!-- Form For Creating Posts -->
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
