Uninstall, remove ckeditor, install, add tinymce

--- a/blogpost/templates/blogpost/post_update.html
+++ b/blogpost/templates/blogpost/post_update.html
@@ -11,7 +11,7 @@
             <!-- Form For Updating Posts -->
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form.media }}
+                {{ form|crispy }}
                 {{ form|crispy }}
                 <input type="submit" value="Update" class="btn btn-green mt-3">
                 <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
