--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,6 +218,29 @@ main {
 }
 
 
+/* Home Page Text Animation Style */
+/* Credits to https://codepen.io/alphardex/pen/Exxodoq */
+.span-animation {
+    animation: glow-in 0.8s both;
+}
+
+@keyframes glow-in {
+  from {
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+    text-shadow: 0 0 25px #000;
+  }
+  75% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.7;
+  }
+}
+
+
 /* Custom Style For Bootstrap Pagination */
 .pagination>li>a {
     color:black;
