--- a/stripdetail/templates/stripdetail/strips.html
+++ b/stripdetail/templates/stripdetail/strips.html
@@ -22,7 +22,7 @@
             {% for strip in page_obj %}
             <!-- Strips Cards-->
             <div class="col-lg-3 col-md-5">
-                <div class="card">
+                <div class="card h-100">
                     <img src=" {{ strip.strip_cover.url }}" class="card-img-top" alt="{{ strip.title }} cover image">
                     <div class="card-body">
                         <h5 class="card-title">{{ strip.title }}</h5>
