--- a/blogpost/templates/blogpost/blog.html
+++ b/blogpost/templates/blogpost/blog.html
@@ -23,7 +23,7 @@
                         <!-- Blog Post Presentation Card -->
                         <div class="col-md-5">
                             <div class="card h-100">
-                                <img src="{{ post.featured_image.url }}" class="card-img-top" alt="{{ post.strip.title }} image">
+                                <img src="{{ post.featured_image.url }}" class="card-img-top img-preview" alt="{{ post.strip.title }} image">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ post.title }}</h5>
                                     <p>Author:
