--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,12 @@ main {
   }
 }
 
+/* Blog List Image Preview */
+.img-preview {
+    object-fit: fill;
+    height: 250px;
+}
+
 
 /* Custom Style For Bootstrap Pagination */
 .pagination>li>a {
