--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}StripTeaser Blog{% endblock title %}
 {% block content %}
 <section class="container">
-    <div class="row justify-content-center text-center">
+    <div class="row justify-content-center align-items-end text-center">
         <div class="col-md-7 btn-grey rounded p-4">
             <h1>
                 <span class="span-color">S</span>
