Add hero image, change style of home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,12 +240,29 @@ main {
   }
 }
 
+/* Hero Image */
+.hero-img::before {
+    content: '';
+    position:absolute;
+    width: 100%;
+    height: calc((100% - 66px - 74.29px)/2);
+    background: url('https://res.cloudinary.com/dvkbdh57c/image/upload/v1686055348/blacksad_seyszv.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 66px;
+    left:0;
+}
+
+.bg-grey-opacity {
+    background-color: rgba(248, 249, 250, 0.9);
+}
+
+
 /* Blog List Image Preview */
 .img-preview {
     object-fit: fill;
     height: 250px;
 }
-
 
 /* Custom Style For Bootstrap Pagination */
 .pagination>li>a {
