--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
     </div>
     <!-- Include Background Animation Template -->
     {% include 'background_animation.html' %}
-    <main class="my-5">
+    <main class="my-5 d-flex flex-column">
         {% block content %}
         {% endblock content %}
     </main>
