--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!-- Header Template -->
 <header>
     <!-- Modified Bootstrap Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary z-1">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home-page' %}"><svg class="css-ze2te4 css-qd6ojx"
                     viewBox="0 0 88.98305084745763 84.09388559703329" width=40 height=40>
