--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block title %}StripTeaser Blog{% endblock title %}
 {% block content %}
-<section class="container">
-    <div class="row justify-content-center align-items-end text-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+<section class="container flex-grow-1 d-flex align-items-center hero-img">
+    <div class="row justify-content-center text-center">
+        <div class="col-md-7 bg-grey-opacity rounded p-4 z-1 hero-msg">
             <h1>
                 <span class="span-color">S</span>
                 <span class="span-color">t</span>
