--- a/blogpost/templates/blogpost/post_update.html
+++ b/blogpost/templates/blogpost/post_update.html
@@ -12,7 +12,7 @@
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
-                {{ form|crispy }}
+                {{ form.media }}
                 <input type="submit" value="Update" class="btn btn-green mt-3">
                 <input type="reset" value="Clear" class="btn btn-outline-secondary mt-3 mx-1">
             </form>
