Change style of background color

--- a/blogpost/templates/blogpost/strippost_update.html
+++ b/blogpost/templates/blogpost/strippost_update.html
@@ -6,7 +6,7 @@
 <!-- Strip Post Update Page -->
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h1 class="mb-4">Update Review</h1>
             <!-- Form For Updating Posts -->
             <form action="" method="POST" enctype="multipart/form-data">
