--- a/stripdetail/templates/stripdetail/stripdetail_form.html
+++ b/stripdetail/templates/stripdetail/stripdetail_form.html
@@ -6,7 +6,7 @@
 <!-- Strip Details Creation Page -->
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h1 class="mb-4">Expand Strip Collection</h1>
             <!-- Form For Creating Strip Details -->
             <form action="" method="POST" enctype="multipart/form-data">
