--- a/blogpost/templates/blogpost/strippost_form.html
+++ b/blogpost/templates/blogpost/strippost_form.html
@@ -6,7 +6,7 @@
 <!-- Strip Post Creation Page -->
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h1 class="mb-4">Write Review</h1>
             <p>There is no edition of the comic you want to write about?</p>
             <a href="{% url 'strip-create' %}" class="btn btn-outline-secondary mb-4">You can add here!</a>
