--- a/member/templates/member/member_form.html
+++ b/member/templates/member/member_form.html
@@ -6,7 +6,7 @@
 <!-- User Registration Section -->
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h1 class="mb-4">Sign Up</h1>
             <!-- Sign Up Form -->
             <form action="" method="POST">
