--- a/member/templates/member/member_profile_update.html
+++ b/member/templates/member/member_profile_update.html
@@ -5,7 +5,7 @@
 {% block content %}
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <div class="d-flex align-items-center mb-4">
                 <!-- Conditional Rendering for avatar -->
                 {% if user.member.avatar.url %}
