--- a/member/templates/member/member_sign_in.html
+++ b/member/templates/member/member_sign_in.html
@@ -6,7 +6,7 @@
 <!-- User Sign In Form-->
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4">
+        <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h1 class="mb-4">Sign In</h1>
             <!-- Sign In Form-->
             <form action="" method="POST">
