--- a/member/templates/member/member_sign_out.html
+++ b/member/templates/member/member_sign_out.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="container">
     <div class="row justify-content-center">
-        <div class="col-md-7 btn-grey rounded p-4 text-center">
+        <div class="col-md-7 bg-grey-opacity rounded p-4 text-center">
             <h1>Sign Out</h1>
             <p class="mt-4 text-muted">
                 If you accidentally Sing Out, you can again 
