--- a/static/css/style.css
+++ b/static/css/style.css
@@ -277,3 +277,12 @@ main {
     color: black;
     border-color: rgb(248, 249, 250);
 }
+
+
+/* Media Query */
+@media only screen and (min-width: 768px) {
+    .img-preview-strip {
+        height: 386px;
+        object-fit: fill;
+    }
+  }
