--- a/blogpost/templates/blogpost/strippost_list.html
+++ b/blogpost/templates/blogpost/strippost_list.html
@@ -21,7 +21,7 @@
                 <!-- Loop through the list of Posts -->
                 {% for post in page_obj %}
                         <!-- Blog Post Presentation Card -->
-                        <div class="col-md-5">
+                        <div class="col-lg-5 col-md-10 col-sm-12">
                             <div class="card h-100">
                                 <img src="{{ post.featured_image.url }}" class="card-img-top img-preview" alt="{{ post.strip.title }} image">
                                 <div class="card-body">
