--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,7 +230,7 @@ main {
   }
   65% {
     opacity: 1;
-    text-shadow: 0 0 25px #000;
+    text-shadow: 0 0 40px #f5af02;
   }
   75% {
     opacity: 1;
@@ -243,7 +243,7 @@ main {
 /* Hero Image */
 .hero-img::before {
     content: '';
-    position:absolute;
+    position: absolute;
     width: 100%;
     height: calc((100% - 66px - 74.29px)/2);
     background: url('https://res.cloudinary.com/dvkbdh57c/image/upload/v1686055348/blacksad_seyszv.webp');
@@ -279,7 +279,22 @@ main {
 }
 
 
-/* Media Query */
+/* Media Queries */
+/* Up to 576px */
+@media only screen and (max-width: 576px) {
+    /* Hero Message */
+    .hero-msg {
+        margin-block: 17rem;
+    }
+
+    /* Hero Image */
+    .hero-img::before {
+        background-position: 22% 50%;
+    }
+}
+
+
+/* From 768px */
 @media only screen and (min-width: 768px) {
     .img-preview-strip {
         height: 386px;
