--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="container flex-grow-1 d-flex align-items-center hero-img">
     <div class="row justify-content-center text-center">
-        <div class="col-md-7 bg-grey-opacity rounded p-4 z-1 hero-msg">
+        <div class="col-xl-6 col-lg-8 col-md-10 bg-grey-opacity rounded p-4 z-1 hero-msg">
             <h1>
                 <span class="span-color">S</span>
                 <span class="span-color">t</span>
